# unix_notes

./: .gitignore  .rspec  .rubocop.yml  .travis.yml  CMakeLists.txt  Gemfile  README.md
spec/: spec_helper.rb
spec/shared/: daemon.rb  exec.rb  silently.rb  spawn.rb
spec/src/: 2_12_signal_spec.rb  2_13_signal_spec.rb  2_14_resources_spec.rb  2_15_daemon_spec.rb  2_5_sym_link_spec.rb  2_6_cp_spec.rb  2_7_file_mode_spec.rb  2_8_file_stat_spec.rb  2_9_spec.rb
src/: 2_12_signal.c  2_13_signal.c  2_14_resources.c  2_15_daemon.c  2_2_env.c  2_3_env.c  2_5_sym_link.c  2_6_cp.c  2_7_file_mode.c  2_8_file_stat.c  2_9.c  CMakeLists.txt
test/: CMakeLists.txt
